Fix image / title colour contrasting, Override form input styling

--- a/less/main/typography.less
+++ b/less/main/typography.less
@@ -143,7 +143,9 @@ p, .paragraph, ul, ol, li, .contentgroup__body {
 	.make-font-a-little-smaller(@font__p--font-size);
 	.make-font-smaller(@font__p--font-size);
 	.make-font-a-lot-smaller(@font__p--font-size);
+}
 
+p, ul, ol, li, .contentgroup__body {
 	.style--light & {
 	    color: fade(@contrast--light, 80%);
 	}
@@ -223,6 +225,7 @@ a {
 	margin: 0;
 	padding: 0;
 	height: auto;
+	text-decoration: none;
 	.transition();
 
 	.style--light & {
