--- a/less/widgets/gallery.less
+++ b/less/widgets/gallery.less
@@ -21,7 +21,7 @@
 .gallery-widget-background--spacing() when not (@color__gallery--background = @color__body--background) {
 	padding: 2em 0;
 	
-	section &:first-child {
+	body:not(#migrated) #page-zones__main > &:first-child {
 		margin-top: -2em;
 		
 		.responsivecolumns & {
